--- a/src/app-ui/Header/_Header.scss
+++ b/src/app-ui/Header/_Header.scss
@@ -1,14 +1,14 @@
 .c-header {
   position: sticky;
   top: 0px;
-  height: 90px;
+  height: 60px;
   z-index: 100;
   .inner-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 64px;
-    height: 90px;
+    padding: 0px 24px;
+    height: 60px;
     background-color: $white;
   }
   nav {
@@ -21,8 +21,8 @@
     }
     a {
       list-style: none;
-      padding: 0px 23px;
-      font-size: 16px;
+      padding: 0px 16px;
+      font-size: 14px;
       color: $secondary;
       &.active {
         color: $primary;
@@ -38,7 +38,9 @@
     }
   }
   .logo {
-    width: 287px;
+    width: 100%;
+    max-width: 210px;
+    min-width: 140px;
   }
   .shadow-box {
     background: transparent
@@ -46,7 +48,7 @@
       0% no-repeat padding-box;
     height: 80px;
     position: absolute;
-    top: 35px;
+    top: 0;
     z-index: -1;
     width: 100%;
   }
