--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -1,25 +1,26 @@
 @import "../../assets/scss/variables";
 .emp-agncy-main {
   h1 {
-    font-family: $font-subtitle;
-    font-size: 36px;
+    font-family: $font-medium;
+    font-size: 30px;
     margin: 0 0 20px 0;
+    line-height: 1.5;
   }
   p {
-    font-size: 24px;
-    max-width: 480px;
+    font-size: 22px;
+    max-width: 450px;
     font-family: $font-light;
   }
   padding: 40px 0;
   .c-containers {
-    padding: 0 88px;
+    padding: 0 62px;
     .c-row {
       display: flex;
-      .cell-30 {
-        width: 40%;
+      .auto-grow {
+        flex-grow: 1;
       }
       .cell-auto {
-        width: 60%;
+        width: 55%;
       }
       .cell-full {
         width: 100%;
@@ -45,8 +46,8 @@
     }
   }
   .emp-heading {
-    font-size: 40px;
-    line-height: 55px;
+    font-size: 30px;
+    line-height: 50px;
   }
   .blue {
     color: $blue;
