--- a/src/features/jobSeekers/_JobSeekers.scss
+++ b/src/features/jobSeekers/_JobSeekers.scss
@@ -1,32 +1,33 @@
 @import "../../assets/scss/variables";
 .job-seekers-main {
   h1 {
-    font-family: $font-subtitle;
-    font-size: 36px;
+    font-family: $font-medium;
+    font-size: 30px;
     margin: 0 0 20px 0;
+    line-height: 1.5;
   }
   p {
-    font-size: 24px;
-    max-width: 480px;
+    font-size: 22px;
+    max-width: 450px;
     font-family: $font-light;
   }
-  padding: 80px 0;
+  padding: 40px 0;
   .c-containers {
-    padding: 0 88px;
+    padding: 0 62px;
     .c-row {
       display: flex;
-      .cell-30 {
-        width: 40%;
+      .auto-grow {
+        flex-grow: 1;
       }
       .cell-auto {
-        width: 60%;
+        width: 55%;
       }
       .cell-full {
         width: 100%;
       }
       .text-section {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
       }
       .image-section {
         img {
@@ -45,8 +46,8 @@
     }
   }
   .emp-heading {
-    font-size: $font-size-30;
-    line-height: 55px;
+    font-size: 30px;
+    line-height: 50px;
   }
   .blue {
     color: $blue;
@@ -57,5 +58,13 @@
   }
   .sections {
     padding-top: 200px;
+    // h1 {
+    //   font-size: $font-size-30;
+    //   margin: 0 0 28px 0;
+    // }
+    // p {
+    //   font-size: $font-size-lg;
+    //   max-width: 460px;
+    // }
   }
 }
