--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -1,147 +1,148 @@
 @import "../../assets/scss/variables";
 
-.pricing-container {
-  padding: 40px 90px;
-  position: relative;
+.pricing-section-main {
+  margin: auto;
+  .pricing-container {
+    padding: 40px 62px;
+    position: relative;
 
-  .bg {
-    background-image: url("../../assets/images/bg.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: calc(100vh - 64px);
-    z-index: -1;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-
-  .heading-section {
-    padding: 60px 0;
-
-    & p {
-      color: $text-color;
-      font-size: $font-size-x-lg;
-      font-family: $font-medium;
-    }
-  }
-
-  .pricing-main {
-    margin: auto;
-    display: flex;
-    color: $text-color;
-    font-size: $font-size-md;
-
-    & .color-blue {
-      color: $blue;
-      font-size: $font-size-lg;
-    }
-
-    & .pricing-section {
-      height: 70vh;
-
-      width: 60%;
+    .bg {
+      background-image: url("../../assets/images/bg.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 100%;
       height: 100%;
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
 
-      & .pricing-row {
-        display: flex;
+    .heading-section {
+      padding: 30px 0;
+
+      & p {
+        color: $text-color;
+        font-size: 34px;
+        font-family: $font-medium;
+      }
+    }
+
+    .pricing-main {
+      margin: auto;
+      display: flex;
+      color: $text-color;
+      font-size: $font-size-md;
+
+      & .color-blue {
+        color: $blue;
+        font-size: 16px;
+      }
+
+      & .pricing-section {
+        height: 70vh;
+
+        width: 60%;
         height: 100%;
 
-        & .pricing-card {
-          width: 100%;
-          border-left: 1px solid $border-color;
-          min-height: 500px;
+        & .pricing-row {
+          display: flex;
           height: 100%;
 
-          &:first-child {
-            border-left: none;
-          }
-
-          &:last-child {
-            border-right: 1px solid $border-color;
-          }
-
-          & .pricing-header {
+          & .pricing-card {
             width: 100%;
+            border-left: 1px solid $border-color;
+            min-height: 700px;
+            height: 100%;
+            padding: 50px 0 0 0;
 
-            & .top-items-head {
-              height: 50px;
-              text-align: center;
+            &:first-child {
+              border-left: none;
+            }
+
+            &:last-child {
+              border-right: 1px solid $border-color;
+            }
+
+            & .pricing-header {
               width: 100%;
-            }
 
-            // .customize {
-            // padding: 0;
-            // margin: 0;
-            a {
-              color: $blue;
-              font-size: $font-size-lg;
-              text-decoration: none;
-            }
-            // }
-          }
-
-          & .pricing-items {
-            & .pricings {
-              text-align: center;
-              min-height: 45px;
-              vertical-align: middle;
-
-              & .check-icon {
-                color: $green;
-                font-size: 25px;
+              & .top-items-head {
+                height: 50px;
+                text-align: center;
+                width: 100%;
               }
+
+              // .customize {
+              // padding: 0;
+              // margin: 0;
+              a {
+                color: $blue;
+                font-size: $font-size-lg;
+                text-decoration: none;
+              }
+              // }
             }
 
-            & .pricing-typs {
-              min-height: 45px;
-              vertical-align: middle;
+            & .pricing-items {
+              & .pricings {
+                text-align: center;
+                min-height: 40px;
+                vertical-align: middle;
+
+                & .check-icon {
+                  color: $green;
+                  font-size: 20px;
+                }
+              }
+
+              & .pricing-typs {
+                min-height: 40px;
+                vertical-align: middle;
+              }
             }
           }
         }
       }
-    }
 
-    & .align-center {
-      display: grid;
-      place-items: center;
-    }
+      & .align-center {
+        display: grid;
+        place-items: center;
+      }
 
-    & .pricing-image {
-      width: 40%;
-      padding: 0 20px;
+      & .pricing-image {
+        width: 40%;
+        padding: 0 20px;
 
-      & .image-section {
-        display: flex;
-        justify-content: center;
-        & img {
-          width: 100%;
-          max-width: 360px;
-          min-width: 290px;
-          max-height: 500px;
-          object-fit: cover;
-          border-radius: 15px;
+        & .image-section {
+          display: flex;
+          justify-content: center;
+          & img {
+            width: 100%;
+            max-width: 360px;
+            min-width: 290px;
+            max-height: 500px;
+            object-fit: cover;
+            border-radius: 15px;
+          }
         }
       }
     }
   }
-
   .pricing-details {
     width: 100%;
     display: flex;
+    align-items: flex-start;
     padding-top: 200px;
 
     .video-section {
-      // width: 50%;
-      // height: 0;
-      // padding-bottom: 40%;
-      // position: relative;
-      width: 100%;
+      width: 50%;
       max-width: 850px;
       height: 0;
       padding-bottom: 40%;
       position: relative;
+      min-height: 500px;
 
       .box {
         position: absolute;
@@ -161,23 +162,13 @@
       }
     }
     .buy-premuim {
-      // width: 50%;
-      // padding-top: 80px;
-      // padding-left: 60px;
       flex-grow: 1;
-      // background: red;
       padding-top: 2%;
-      // padding-top: 80px;
-      // padding-left: 60px;
 
       .desc {
-        // font-size: $font-size-x-lg;
-        // max-width: 650px;
-        // line-height: 60px;
-        // margin: 0 0 30px;
-        font-size: 2.2vw;
-        max-width: 650px;
-        line-height: 3.5vw;
+        font-size: 30px;
+        max-width: 490px;
+        line-height: 1.8;
         margin: 0 0 30px;
 
         span {
@@ -212,18 +203,20 @@
   .interview {
     display: flex;
     align-items: center;
+    padding: 0 62px;
     padding-top: 200px;
 
     .interview-details {
       width: 40%;
 
       .coming-soon {
-        font-size: $font-size-x-lg;
+        font-size: 38px;
+        letter-spacing: 3px;
         color: $blue;
         text-transform: uppercase;
       }
       .make-interview {
-        font-size: $font-size-lg;
+        font-size: 18px;
       }
     }
 
@@ -236,25 +229,27 @@
       }
     }
     p {
-      max-width: 500px;
+      max-width: 460px;
+      line-height: 1.7;
+      font-size: 12px;
     }
     .points {
       display: flex;
       align-items: center;
-      margin: 15px 0;
+      margin: 5px 0;
 
       .checks {
-        width: 27px;
-        height: 27px;
+        width: 20px;
+        height: 20px;
         border-radius: 89px;
-        background-color: $green;
+        background-color: #7ed957;
         display: flex;
         justify-content: center;
         align-items: center;
         color: #fff;
         font-size: 20px;
-        min-width: 27px;
-        min-height: 27px;
+        min-width: 20px;
+        min-height: 20px;
       }
       p {
         margin: 0 0 0 10px;
