--- a/src/features/services/_services.scss
+++ b/src/features/services/_services.scss
@@ -4,7 +4,7 @@
 
   h1 {
     font-family: $font-subtitle;
-    font-size: 36px;
+    font-size: 18px;
     margin: 0 0 20px 0;
   }
   p {
@@ -15,7 +15,7 @@
     width: 60%;
     height: 100%;
     min-height: fit-content;
-    padding: 100px 88px;
+    padding: 100px 62px;
 
     .coming-soon {
       color: $blue;
@@ -27,8 +27,10 @@
       margin: 20px 0;
     }
     .full-desc {
-      font-size: $font-size-lg;
-      max-width: 800px;
+      font-size: 14px;
+      max-width: 600px;
+      font-family: $font-medium;
+      line-height: 1.8;
     }
     .icons {
       display: flex;
@@ -37,7 +39,7 @@
 
       img {
         margin: 40px 50px 0 0;
-        max-width: 70px;
+        max-width: 60px;
       }
     }
   }
@@ -56,8 +58,8 @@
       padding: 30px;
 
       .services-desc {
-        font-size: $font-size-lg;
-        line-height: 35px;
+        font-size: 15px;
+        line-height: 1.8;
         font-family: $font-medium;
       }
 
