--- a/src/app-ui/Header/_Responsive.scss
+++ b/src/app-ui/Header/_Responsive.scss
@@ -111,3 +111,19 @@
     }
   }
 }
+
+@media screen and (min-width: 1400px) {
+  .c-header {
+    .inner-container {
+      padding: 0px 62px;
+    }
+    .logo {
+      width: 100%;
+      max-width: 250px;
+      min-width: 140px;
+    }
+    nav a {
+      font-size: 16px;
+    }
+  }
+}
