HomPage : Home ui fixes

--- a/src/features/pricing/_Responsive.scss
+++ b/src/features/pricing/_Responsive.scss
@@ -186,8 +186,8 @@
                 .pricings {
                   min-height: 60px;
                   font-size: 16px;
-                  .pricings .check-icon {
-                    font-size: 30px;
+                  .check-icon {
+                    font-size: 28px;
                   }
                 }
                 .pricing-typs {
