--- a/src/features/home/_Responsive.scss
+++ b/src/features/home/_Responsive.scss
@@ -122,6 +122,8 @@
       padding: 20px 0 0 0;
 
       .inner-container {
+        margin: auto;
+
         .banner-content {
           margin: 20px 0 68px 0;
         }
