HomePage: Pricing Ui fixes

--- a/src/features/pricing/_Responsive.scss
+++ b/src/features/pricing/_Responsive.scss
@@ -21,6 +21,7 @@
             .pricing-card {
               font-size: 10px;
               padding: 0 2px;
+              min-height: 500px;
 
               .pricing-header a {
                 font-size: 12px;
