HomePage: Searchable select fix

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -243,6 +243,7 @@ p {
 
     input {
       box-shadow: none !important;
+      padding: 0 6px !important;
     }
 
     .ant-select-selection-placeholder {
