--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -28,6 +28,8 @@
 
   &.with-form {
     width: 1020px;
+    background-color: #fff;
+
     border-radius: 20px;
     display: flex;
     justify-content: flex-start;
