--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -258,6 +258,7 @@ p {
   .ant-select-selector {
     .ant-select-selection-item {
       line-height: 35px;
+      font-size: 12px;
     }
   }
 }
@@ -335,6 +336,7 @@ p {
 
   .flag-dropdown {
     background-color: transparent;
+    font-size: 12px;
     border: none;
     border-radius: 20px 0 0 20px;
     padding: 0 0px 0px 5px;
