HomePage: Fixes bugs and matched with xd

--- a/src/app-ui/Header/_Header.scss
+++ b/src/app-ui/Header/_Header.scss
@@ -1,16 +1,17 @@
 .c-header {
   position: sticky;
   top: 0px;
-  height: 60px;
+  height: 65px;
   z-index: 100;
   .inner-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 24px;
-    height: 60px;
+    height: 65px;
     background-color: $white;
   }
+
   nav {
     display: flex;
     margin: 0px;
@@ -18,6 +19,9 @@
       li {
         color: $text-color;
       }
+    }
+    .c-button {
+      padding: 6px 32px;
     }
     a {
       list-style: none;
