--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -93,11 +93,11 @@
 
       .job-title {
         margin: 0px;
-        font-size: $font-size-lg;
+        font-size: $font-size-md;
       }
 
       .title {
-        font-family: $font-subtitle;
+        font-family: $font-medium;
       }
 
       .actions-wrapper {
