--- a/src/features/employerAndAgency/_Responsive.scss
+++ b/src/features/employerAndAgency/_Responsive.scss
@@ -33,7 +33,7 @@
           width: 100%;
           text-align: center;
         }
-        .auto-grow {
+        .w-40 {
           width: 100%;
         }
       }
@@ -106,16 +106,16 @@
   .emp-agncy-main {
     padding: 70px 0;
     .emp-heading {
-      font-size: 50px;
+      // font-size: 50px;
       line-height: 1.4;
     }
     h1 {
-      font-size: 50px;
+      // font-size: 50px;
       margin: 0 0 20px 0;
       line-height: 1.4;
     }
     p {
-      font-size: 22px;
+      // font-size: 22px;
       max-width: 650px;
     }
   }
