--- a/src/features/jobSeekers/_Responsive.scss
+++ b/src/features/jobSeekers/_Responsive.scss
@@ -104,18 +104,18 @@
 
 @media screen and (min-width: 1400px) {
   .job-seekers-main {
-    padding: 70px 0;
+    padding: 90px 0;
     .emp-heading {
-      font-size: 50px;
+      // font-size: 50px;
       line-height: 1.4;
     }
     h1 {
-      font-size: 50px;
+      // font-size: 50px;
       margin: 0 0 20px 0;
       line-height: 1.4;
     }
     p {
-      font-size: 22px;
+      // font-size: 22px;
       max-width: 650px;
     }
   }
