--- a/src/shared-ui/BannerWithImages/_BannerWithImages.scss
+++ b/src/shared-ui/BannerWithImages/_BannerWithImages.scss
@@ -11,8 +11,8 @@
     .banner-img-main {
       position: relative;
       width: 33.33%;
-      max-width: calc(280px - 2px);
-      max-height: 200px;
+      max-width: calc(240px);
+      // max-height: 200px;
       display: flex;
       flex-wrap: nowrap;
       justify-content: flex-end;
