--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -1,35 +1,57 @@
 @import "../../assets/scss/variables";
 .emp-agncy-main {
   h1 {
-    font-family: $font-medium;
-    font-size: 30px;
+    font-family: $font-subtitle;
+    font-size: 2vw;
     margin: 0 0 20px 0;
     line-height: 1.5;
   }
   p {
-    font-size: 22px;
+    font-size: 1.2vw;
     max-width: 450px;
     font-family: $font-light;
   }
+  .comming-soon {
+    font-size: 2.5vw;
+    font-family: $font-medium;
+    margin: 0 0 30px 0;
+  }
+
+  .interview-type {
+    margin-bottom: 40px;
+  }
+
   padding: 40px 0;
   .c-containers {
     padding: 0 60px;
     .c-row {
       display: flex;
-      .auto-grow {
-        flex-grow: 1;
+      .w-35 {
+        width: 35%;
       }
-      .cell-auto {
+      .w-70 {
+        width: 70%;
+      }
+      .w-55 {
         width: 55%;
       }
-      .cell-full {
-        width: 100%;
+      .w-40 {
+        width: 40%;
+      }
+      .w-60 {
+        width: 60%;
       }
       .text-section {
         display: flex;
         justify-content: center;
       }
+      .interview-section {
+        p {
+          font-size: 1.3vw;
+        }
+      }
       .image-section {
+        // padding: 0 30px;
         img {
           width: 100%;
         }
@@ -43,10 +65,13 @@
       .align-right {
         justify-content: flex-end;
       }
+      .pr-70 {
+        padding-right: 35px;
+      }
     }
   }
   .emp-heading {
-    font-size: 30px;
+    font-size: 2.6vw;
     line-height: 50px;
   }
   .blue {
