--- a/src/features/jobSeekers/_JobSeekers.scss
+++ b/src/features/jobSeekers/_JobSeekers.scss
@@ -1,37 +1,58 @@
 @import "../../assets/scss/variables";
 .job-seekers-main {
   h1 {
-    font-family: $font-medium;
-    font-size: 30px;
+    font-family: $font-subtitle;
+    font-size: 2vw;
     margin: 0 0 20px 0;
     line-height: 1.5;
   }
   p {
-    font-size: 22px;
+    font-size: 1.3vw;
     max-width: 450px;
     font-family: $font-light;
   }
   padding: 40px 0;
   .c-containers {
-    padding: 0 62px;
+    padding: 0 70px;
     .c-row {
       display: flex;
-      .auto-grow {
-        flex-grow: 1;
-      }
-      .cell-auto {
+
+      .w-55 {
         width: 55%;
       }
-      .cell-full {
-        width: 100%;
+      .w-40 {
+        width: 40%;
+      }
+      .w-60 {
+        width: 60%;
       }
       .text-section {
         display: flex;
         justify-content: center;
+        // padding-right: 85px;
       }
       .image-section {
+        padding: 0 30px;
         img {
           width: 100%;
+        }
+      }
+      .video-section {
+        padding-bottom: 40%;
+        position: relative;
+        .box {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
+
+          video {
+            width: 100%;
+            height: 100%;
+          }
         }
       }
       .center {
@@ -44,10 +65,17 @@
         justify-content: flex-end;
       }
     }
+    .ml {
+      margin-left: 70px;
+    }
+    .pr-70 {
+      padding-right: 35px;
+    }
   }
   .emp-heading {
-    font-size: 30px;
+    font-size: 2vw;
     line-height: 50px;
+    font-family: $font-medium;
   }
   .blue {
     color: $blue;
