--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -37,7 +37,7 @@
 
       & .color-blue {
         color: $blue;
-        font-size: 16px;
+        font-size: 20px;
       }
 
       & .pricing-section {
@@ -53,7 +53,7 @@
           & .pricing-card {
             width: 100%;
             border-left: 1px solid $border-color;
-            min-height: 700px;
+            min-height: 620px;
             height: 100%;
             padding: 50px 0 0 0;
 
@@ -78,9 +78,15 @@
               // padding: 0;
               // margin: 0;
               a {
-                color: $blue;
-                font-size: $font-size-lg;
-                text-decoration: none;
+                // position: relative;
+                // top: -4px;
+                // color: $blue;
+                // font-size: 20px;
+                // text-decoration: none;
+                &:hover {
+                  color: #fff;
+                  text-decoration: none;
+                }
               }
               // }
             }
@@ -120,9 +126,8 @@
           justify-content: center;
           & img {
             width: 100%;
-            max-width: 360px;
+            max-width: 400px;
             min-width: 290px;
-            max-height: 500px;
             object-fit: cover;
             border-radius: 15px;
           }
@@ -137,7 +142,7 @@
     padding-top: 200px;
 
     .video-section {
-      width: 50%;
+      width: 60%;
       max-width: 850px;
       height: 0;
       padding-bottom: 40%;
@@ -167,13 +172,13 @@
 
       .desc {
         font-size: 30px;
-        max-width: 490px;
-        line-height: 1.8;
+        max-width: 600px;
+        line-height: 1.5;
         margin: 0 0 30px;
 
         span {
           color: $blue;
-          // font-size: $font-size-x-lg;
+          font-family: $font-subtitle;
           font-size: 2.2vw;
         }
       }
@@ -188,11 +193,14 @@
       .btn-sec {
         display: flex;
         align-items: center;
-        margin: 20px 0 0 0;
+        margin: 30px 0;
 
         p {
           font-size: $font-size-sm;
           margin: 0 0 0 10px;
+        }
+        .c-button {
+          padding: 14px 40px;
         }
       }
       .direct-message {
