--- a/src/features/pricing/_Responsive.scss
+++ b/src/features/pricing/_Responsive.scss
@@ -176,7 +176,7 @@
     .pricing-container {
       .heading-section {
         p {
-          font-size: 48px;
+          font-size: 2.5vw;
         }
       }
       .pricing-main {
@@ -185,15 +185,15 @@
             .pricing-card {
               .pricing-items {
                 .pricings {
-                  min-height: 60px;
-                  font-size: 16px;
+                  min-height: 50px;
+                  font-size: 14px;
                   .check-icon {
-                    font-size: 28px;
+                    font-size: 22px;
                   }
                 }
                 .pricing-typs {
-                  min-height: 60px;
-                  font-size: 16px;
+                  min-height: 50px;
+                  font-size: 14px;
                   vertical-align: middle;
                 }
               }
@@ -201,6 +201,9 @@
                 .top-items-head {
                   height: 60px;
                   font-size: 16px;
+                }
+                .color-blue {
+                  font-size: 20px;
                 }
               }
             }
