--- a/src/features/services/_services.scss
+++ b/src/features/services/_services.scss
@@ -3,9 +3,9 @@
   display: flex;
 
   h1 {
-    font-family: $font-subtitle;
-    font-size: 18px;
-    margin: 0 0 20px 0;
+    font-family: $font-medium;
+    font-size: 24px;
+    margin: 0 0 30px 0;
   }
   p {
     font-size: 24px;
@@ -15,20 +15,21 @@
     width: 60%;
     height: 100%;
     min-height: fit-content;
-    padding: 100px 62px;
+    padding: 120px 62px 120px 80px;
 
     .coming-soon {
       color: $blue;
-      font-size: $font-size-x-lg;
+      font-size: 2.8vw;
       text-transform: uppercase;
+      padding: 0 0 20px 0;
     }
     .services-desc {
       font-size: $font-size-30;
       margin: 20px 0;
     }
     .full-desc {
-      font-size: 14px;
-      max-width: 600px;
+      font-size: 16px;
+      padding: 0 50px 0 0;
       font-family: $font-medium;
       line-height: 1.8;
     }
@@ -39,7 +40,7 @@
 
       img {
         margin: 40px 50px 0 0;
-        max-width: 60px;
+        max-width: 70px;
       }
     }
   }
@@ -59,6 +60,7 @@
 
       .services-desc {
         font-size: 15px;
+        margin-bottom: 30px;
         line-height: 1.8;
         font-family: $font-medium;
       }
@@ -73,8 +75,7 @@
 
         .text-area {
           .ant-input {
-            border: 1px solid $primary;
-            -webkit-transition: all 0.3s;
+            border: none !important;
             transition: all 0.3s;
             border-radius: 20px;
             resize: none;
@@ -84,11 +85,24 @@
             border-right-width: unset !important;
             box-shadow: unset;
           }
+          .ant-form-item-control-input-content {
+            display: flex;
+            flex-direction: column;
+          }
+          .ant-form-item-control-input {
+            border-radius: 16px;
+            padding: 10px 0;
+            box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2) !important;
+          }
         }
         .submit-btn {
           width: 100%;
           display: flex;
           justify-content: flex-end;
+
+          .c-button {
+            padding: 6px 40px;
+          }
         }
       }
     }
