--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -135,6 +135,10 @@
           .block-title {
             font-size: $font-size-md;
             color: $secondary;
+            &.thick-title {
+              font-family: $font-subtitle;
+              font-size: 16px !important;
+            }
           }
 
           .block-text {
@@ -228,5 +232,9 @@
       background-color: unset !important;
       color: $white !important;
     }
+  }
+  .c-images-gallery > span > h6 {
+    font-family: $font-subtitle;
+    font-size: 16px !important;
   }
 }
