--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -342,6 +342,29 @@ p {
 // custom select
 .ant-select {
   width: 300px !important;
+  z-index: 40 !important;
+
+  .ant-select-dropdown {
+    padding-top: 40px;
+    top: 0px !important;
+    z-index: -1 !important;
+    border-radius: 16px;
+    .ant-select-item-option-content {
+      font-size: $font-size-sm;
+    }
+  }
+
+  &.ant-select-multiple {
+    .ant-select-selection-item {
+      height: 25px;
+      line-height: 25px;
+      margin-top: 0;
+      margin-bottom: 6px;
+    }
+    .ant-select-selection-overflow-item {
+      opacity: 0;
+    }
+  }
 
   .ant-select-selector {
     font-size: $font-size-sm;
@@ -581,7 +604,10 @@ p {
   height: 3px;
 }
 
-.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-content
+  > .ant-steps-item-title::after {
   background-color: $green;
 }
 
@@ -789,8 +815,11 @@ p {
   }
 }
 // select placeholder
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector::after,
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector::after,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-item,
 .ant-select-single.ant-select-lg:not(.ant-select-customize-input)
   .ant-select-selector
   .ant-select-selection-placeholder {
