--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -147,7 +147,7 @@
       height: 0;
       padding-bottom: 40%;
       position: relative;
-      min-height: 500px;
+      min-height: 340px;
 
       .box {
         position: absolute;
@@ -216,9 +216,10 @@
 
     .interview-details {
       width: 40%;
+      padding: 20px 0;
 
       .coming-soon {
-        font-size: 38px;
+        font-size: 25px;
         letter-spacing: 3px;
         color: $blue;
         text-transform: uppercase;
@@ -243,7 +244,7 @@
     }
     .points {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       margin: 5px 0;
 
       .checks {
