--- a/src/features/home/_Home.scss
+++ b/src/features/home/_Home.scss
@@ -100,6 +100,7 @@
         width: max-content;
         // min-width: calc(281px + 87px);
         max-width: 310px;
+        margin: 20px 0;
         flex-direction: row;
         // margin-left: 30px;
         align-items: center;
