--- a/src/features/home/_Responsive.scss
+++ b/src/features/home/_Responsive.scss
@@ -21,7 +21,7 @@
       margin: auto;
     }
     .main-heading {
-      font-size: 25px;
+      font-size: 20px;
       .banner-heading-highlight {
         font-size: 25px;
       }
@@ -31,15 +31,16 @@
       font-size: 20px;
     }
     .home-content-container {
-      margin: 60px 0 0 0;
+      margin: 0 0 0 0;
+      padding: 20px 0;
 
       h5 {
-        font-size: 20px;
+        font-size: 18px;
       }
     }
     .container-benefit {
       padding: 0 10px;
-      margin: 0 0 60px 0;
+      margin: 0 0 0px 0;
       .inner-container {
         justify-content: center;
         .box {
@@ -61,7 +62,7 @@
     }
     .container-filters {
       padding: 0 10px;
-      margin: 0 0 60px 0;
+      margin: 0 0 20px 0;
       .inner-container {
         justify-content: center;
         .box {
@@ -85,6 +86,7 @@
     .bottom-container {
       padding: 0;
       .bottom-container-row {
+        padding: 20px 0 0 0;
         // flex-direction: column-reverse;
         .bottom-text-section {
           flex: 1 1;
@@ -92,11 +94,17 @@
           max-width: 100%;
           min-width: 100%;
           margin: 10px 0 0 0;
+
+          .small-paragraph {
+            p {
+              padding: 0;
+            }
+          }
         }
         .btm-container-img {
           flex: 2 1;
           min-width: 100%;
-          margin: 20px 0 20px 0;
+          margin: 40px 0;
         }
       }
       .demo-btn {
@@ -152,11 +160,14 @@
       color: #171c3c;
     }
     .container-benefit {
-      padding: 0 10px;
-      margin: 0 0 calc(157px / 2) 0;
+      padding: 40px 0;
+      margin: 0;
 
       .inner-container {
+        justify-content: space-around;
+
         .box {
+          margin: 20px 0;
           img {
             width: 60px;
           }
@@ -164,11 +175,14 @@
       }
     }
     .container-filters {
-      padding: 0 10px;
-      margin: 0 0 calc(157px / 2) 0;
+      padding: 40px 0;
+      margin: 0;
 
       .inner-container {
+        justify-content: space-around;
         .box {
+          margin: 20px 0;
+
           img {
             width: 60px;
           }
@@ -177,7 +191,8 @@
     }
     .home-content-container {
       text-align: center;
-      margin: calc(157px / 2) 0 0 0;
+      margin: 0;
+      padding: 30px 0 40px 0;
     }
     .bottom-container {
       .bottom-container-row {
@@ -213,39 +228,55 @@
       flex-direction: column;
       padding: 40px 0 0 0;
       .inner-container {
+        padding: 0 0 0 20px;
         .banner-content {
-          font-size: 16px;
+          font-size: 14px;
           margin: 20px 0;
         }
       }
     }
     .main-heading {
-      font-size: 35px;
+      font-size: 25px;
       margin: 0 0 15px 0;
 
       .banner-heading-highlight {
-        font-size: 35px;
+        font-size: 25px;
       }
     }
     .sub-heading {
       margin: 20px 0px;
-      font-size: 25px;
+      font-size: 18px;
     }
+
     .home-content-container {
-      margin: calc(157px / 2) 0 0 0;
+      margin: 0;
+      padding: 60px 0 0 0;
     }
     .container-benefit {
       padding: 0px 50px;
-      margin: 0 0 157px 0;
+      margin: 0 0 0 0;
+      .inner-container {
+        justify-content: space-around;
+        .box {
+          margin: 20px 0;
+        }
+      }
     }
     .container-filters {
-      padding: 0 50px;
-      margin: 0 0 calc(216px / 2) 0;
+      padding: 0px 50px;
+      margin: 0 0 0 0;
+      .inner-container {
+        justify-content: space-around;
+        .box {
+          margin: 20px 0;
+        }
+      }
     }
     .bottom-container {
       .bottom-container-row {
         .bottom-text-section {
-          padding: 0;
+          padding: 20px 0;
+          padding-left: 20px;
           flex: 1 1;
           max-width: 600px;
           min-width: 400px;
