--- a/src/features/jobSeekers/_Responsive.scss
+++ b/src/features/jobSeekers/_Responsive.scss
@@ -2,9 +2,13 @@
 
 @media screen and (max-width: 767px) {
   .job-seekers-main {
-    padding: 10px;
+    padding: 0 10px;
+
     .c-containers {
-      padding: 0;
+      padding: 20px 0 !important;
+      .ml {
+        margin: 0;
+      }
       .c-row {
         .image-section {
           width: 100%;
@@ -29,9 +33,12 @@
             font-size: $font-size-md;
           }
         }
-        .cell-half {
+        .w-55,
+        .w-60 {
           width: 100%;
-          text-align: center;
+        }
+        .video-section {
+          padding-bottom: 100%;
         }
         .auto-grow {
           width: 100%;
@@ -57,7 +64,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .job-seekers-main {
-    padding: 10px;
+    padding: 10px 30px;
 
     h1 {
       font-family: $font-medium;
