homepage ui fixes

--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -237,4 +237,8 @@
     font-family: $font-subtitle;
     font-size: 16px !important;
   }
+  .ant-select {
+    width: unset !important;
+    width: 200px !important;
+  }
 }
