--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -39,6 +39,7 @@
     }
 
     .switches {
+      margin-bottom: 0;
       padding: 6px 0;
       width: 100%;
       max-width: 230px;
@@ -127,8 +128,8 @@
     .ant-select-show-search.ant-select:not(.ant-select-customize-input)
       .ant-select-selector
       input {
-      cursor: auto;
-      visibility: hidden;
+      cursor: unset;
+      visibility: unset;
     }
   }
 }
