HomePage: SignUp Ui Create profile button fix

--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -68,6 +68,9 @@
         justify-content: space-evenly;
         flex-wrap: wrap;
       }
+      .create-profile-button {
+        margin: 20px !important;
+      }
     }
     .c-form {
       height: fit-content;
