--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -150,6 +150,9 @@
       .c-input {
         width: 300px;
       }
+      .create-profile-button {
+        margin: 40px 0;
+      }
     }
 
     &.role-container {
