--- a/src/shared-ui/BannerWithImages/_BannerWithImages.scss
+++ b/src/shared-ui/BannerWithImages/_BannerWithImages.scss
@@ -47,13 +47,37 @@
       > div {
         width: 32%;
       }
+
+      .showimglate {
+        z-index: 1;
+        opacity: 1;
+        transition: all 0.4s ease;
+        animation: move 0.4s both;
+      }
+      .showimg {
+        z-index: 1;
+        opacity: 1;
+        transition: all 0.4s ease;
+        animation: move 0.4s both;
+      }
     }
 
     .banner-img-main:hover {
-      .first {
-        opacity: 1;
-      }
+      // .first {
+      //   opacity: 1;
+      // }
     }
+  }
+}
+
+@keyframes move {
+  from {
+    opacity: 0;
+    // transform: translate(-10px);
+  }
+  to {
+    opacity: 1;
+    // transform: translate(0);
   }
 }
 
