find jobs - layout fix -filter icon hover, active state Services -select update

--- a/src/features/jobs/_Jobs.scss
+++ b/src/features/jobs/_Jobs.scss
@@ -7,7 +7,12 @@
     height: 110px;
     padding: 0px 50px 0px 50px;
     background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(52, 30, 91, 1) 0%, rgba(245, 38, 102, 1) 100%);
+    background: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(52, 30, 91, 1) 0%,
+      rgba(245, 38, 102, 1) 100%
+    );
 
     .header {
       flex-direction: row;
@@ -27,17 +32,6 @@
           &:first-of-type {
             margin: 0px 30px 0px 0px;
           }
-        }
-      }
-
-      .filters {
-        width: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .filter-icon {
-          width: 32px;
         }
       }
 
@@ -85,6 +79,9 @@
   .jobs-wrapper {
     display: flex;
     padding: 0px;
+    .find-jobs-section {
+      width: 35%;
+    }
 
     .jobs-list {
       padding: 15px 30px;
@@ -133,6 +130,15 @@
       }
       .filter-icon {
         width: 32px;
+        &:hover {
+          background-color: $white;
+        }
+        &:active {
+          background-color: $white;
+        }
+        &:focus {
+          background-color: $white;
+        }
       }
     }
     .ant-input-prefix {
