HomePage: Fixes Bugs

--- a/src/features/home/_Home.scss
+++ b/src/features/home/_Home.scss
@@ -92,7 +92,7 @@
       flex-direction: row;
       justify-content: space-between;
       display: flex;
-      flex-wrap: wrap;
+      // flex-wrap: wrap;
       // justify-content: center;
       margin: 20px 0px 0px 0px;
       .box {
@@ -160,7 +160,7 @@
       flex-direction: row;
       justify-content: space-between;
       display: flex;
-      flex-wrap: wrap;
+      // flex-wrap: wrap;
       // justify-content: center;
       margin: 20px 0px 0px 0px;
       .box {
