--- a/src/app-ui/Header/_Responsive.scss
+++ b/src/app-ui/Header/_Responsive.scss
@@ -97,6 +97,13 @@
       margin: 0 0 0 20px;
       font-size: 20px;
     }
+    button.ant-btn.c-button.sign-up-btn {
+      padding: 4px 15px;
+      padding-bottom: 6px;
+      span {
+        font-size: 12px;
+      }
+    }
   }
 }
 
