--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -10,6 +10,7 @@
     font-size: 1.2vw;
     max-width: 450px;
     font-family: $font-light;
+    margin: auto;
   }
   .comming-soon {
     font-size: 2.5vw;
