--- a/src/features/home/_Responsive.scss
+++ b/src/features/home/_Responsive.scss
@@ -42,6 +42,7 @@
       padding: 0 10px;
       margin: 0 0 0px 0;
       .inner-container {
+        flex-wrap: wrap;
         justify-content: center;
         .box {
           min-width: 320px;
@@ -64,6 +65,8 @@
       padding: 0 10px;
       margin: 0 0 20px 0;
       .inner-container {
+        flex-wrap: wrap;
+
         justify-content: center;
         .box {
           width: 320px;
@@ -164,6 +167,7 @@
       margin: 0;
 
       .inner-container {
+        flex-wrap: wrap;
         justify-content: space-around;
 
         .box {
@@ -179,6 +183,7 @@
       margin: 0;
 
       .inner-container {
+        flex-wrap: wrap;
         justify-content: space-around;
         .box {
           margin: 20px 0;
@@ -238,7 +243,6 @@
     .main-heading {
       font-size: 25px;
       margin: 0 0 15px 0;
-
       .banner-heading-highlight {
         font-size: 25px;
       }
@@ -257,6 +261,8 @@
       margin: 0 0 0 0;
       .inner-container {
         justify-content: space-around;
+        flex-wrap: wrap;
+
         .box {
           margin: 20px 0;
         }
@@ -266,6 +272,7 @@
       padding: 0px 50px;
       margin: 0 0 0 0;
       .inner-container {
+        flex-wrap: wrap;
         justify-content: space-around;
         .box {
           margin: 20px 0;
