HomePage: Feedbacks Fixes

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,6 +59,11 @@ a {
 
 img {
   cursor: pointer;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
 .preloader {
