--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -37,7 +37,7 @@
     padding: 0px !important;
     height: 720px;
     position: relative;
-    overflow: hidden;
+    // overflow: hidden;
     box-shadow: 0 0 16px #00000026;
 
     .first-container {
@@ -52,6 +52,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      border-radius: 20px 0 0 20px;
 
       &.role-container {
         width: 200px;
