--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -55,6 +55,7 @@
         // padding: 0 30px;
         img {
           width: 100%;
+          cursor: default;
         }
       }
       .center {
