Apply cursor-> "default" property to Non clickable images

--- a/src/features/home/_Home.scss
+++ b/src/features/home/_Home.scss
@@ -1,5 +1,9 @@
 @import "../../assets/scss/variables";
 
+.container-fluid img {
+  cursor: default;
+}
+
 .home {
   position: relative;
   top: 0px;
@@ -243,6 +247,7 @@
         img {
           width: 100%;
           object-fit: cover;
+          cursor: default;
         }
       }
     }
