--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -130,6 +130,7 @@
             min-width: 290px;
             object-fit: cover;
             border-radius: 15px;
+            cursor: default;
           }
         }
       }
