--- a/src/features/jobSeekers/_JobSeekers.scss
+++ b/src/features/jobSeekers/_JobSeekers.scss
@@ -1,4 +1,5 @@
 @import "../../assets/scss/variables";
+
 .job-seekers-main {
   h1 {
     font-family: $font-subtitle;
@@ -35,6 +36,7 @@
         padding: 0 30px;
         img {
           width: 100%;
+          cursor: default;
         }
       }
       .video-section {
