--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -42,8 +42,8 @@
 
     .first-container {
       width: 380px !important;
-      background: transparent url("../../assets/images/auth/sign-up-back.png")
-        0% 0% no-repeat padding-box;
+      // background: transparent url("../../assets/images/auth/sign-up-back.png")
+      //   0% 0% no-repeat padding-box;
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
