--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -133,3 +133,18 @@
     }
   }
 }
+
+// @media screen and (max-width: 580px) {
+//   .filter-modal {
+//     .modal-dialog {
+//       padding-top: 36px !important;
+//       .modal-content {
+//         width: 95% !important;
+//         .close {
+//           right: 0 !important;
+//           top: -30px !important;
+//         }
+//       }
+//     }
+//   }
+// }
