--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -151,7 +151,7 @@
         width: 300px;
       }
       .create-profile-button {
-        margin: 40px 0;
+        // margin: 40px 0;
       }
     }
 
