--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,6 +59,8 @@ a {
 
 img {
   cursor: pointer;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
 .preloader {
@@ -571,7 +573,7 @@ p {
 
   .c-label {
     display: flex;
-    align-items: end;
+    align-items: flex-start;
   }
 
   .alt-text {
@@ -762,6 +764,13 @@ p {
     .ant-picker-sm,
     .ant-picker-xs {
       width: 100%;
+    }
+  }
+  .ant-popover {
+    z-index: 90;
+    .ant-popover-inner {
+      width: calc(100% - 12px) !important;
+      margin: 0 auto;
     }
   }
 }
