--- a/src/features/login/_Login.scss
+++ b/src/features/login/_Login.scss
@@ -46,6 +46,8 @@
 
     .login-form {
       align-items: center;
+      width: 100%;
+      max-width: 400px;
       label {
         align-self: flex-start;
       }
