--- a/src/features/login/_Responsive.scss
+++ b/src/features/login/_Responsive.scss
@@ -6,6 +6,17 @@
   .forget-password-app {
     width: 300px !important;
   }
+  .c-card-container {
+    .first-container {
+    }
+    .second-container {
+      .login-form {
+        padding: 0 14px;
+        width: 100%;
+        max-width: 400px;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -18,6 +29,7 @@
     .second-container {
       .login-form {
         padding: 0 14px;
+        width: 100%;
       }
     }
   }
