--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -22,9 +22,13 @@
         justify-content: space-evenly;
         flex-wrap: wrap;
       }
+      .c-input {
+        width: 260px !important;
+      }
     }
     .c-form {
       height: fit-content;
+      padding-top: 24px !important;
     }
   }
   .react-tel-input {
@@ -39,6 +43,7 @@
 @media only screen and (max-width: 480px) {
   .signup-container {
     background-color: #fff;
+    overflow-y: unset;
     &.with-form {
       background-color: #fff;
 
@@ -70,6 +75,9 @@
       }
       .create-profile-button {
         margin: 20px !important;
+      }
+      .c-input {
+        width: 100% !important;
       }
     }
     .c-form {
