--- a/src/features/login/_Responsive.scss
+++ b/src/features/login/_Responsive.scss
@@ -20,6 +20,10 @@
 }
 
 @media only screen and (max-width: 480px) {
+  .auth-wrapper {
+    background-image: none;
+    padding-top: 0 !important;
+  }
   .c-form {
     padding: 0 5px;
   }
