jobs-list responsive issue fixed

--- a/src/features/jobs/_Responsive.scss
+++ b/src/features/jobs/_Responsive.scss
@@ -24,6 +24,9 @@
         transform: translateX(0);
         transition: all ease 0.3s;
       }
+      .jobs-list {
+        padding: 12px 10px;
+      }
     }
   }
 }
